fix(masthead): make required spacing Sass functions available
@carbon/styles package's utilities default export only forwards the
em() and rem() functions, but we need to-rem().

--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -17,7 +17,9 @@
 @use '@carbon/styles/scss/theme' as *;
 @use '@carbon/styles/scss/themes' as *;
 @use '@carbon/styles/scss/type' as *;
+@use '@carbon/styles/scss/layout' as layout;
 @use '@carbon/styles/scss/utilities' as *;
+@use '@carbon/styles/scss/utilities/convert' as *;
 @use '../../globals/vars' as *;
 @use '../link-with-icon';
 @use 'vars' as *;
@@ -204,6 +206,8 @@
   :host(#{$c4d-prefix}-masthead-composite),
   :host(#{$c4d-prefix}-masthead-container),
   :host(#{$c4d-prefix}-cloud-masthead-container) {
+    @include layout.emit-layout-tokens();
+
     position: relative;
     z-index: 900;
     padding-top: $spacing-09;
